--- a/home/bingo/variables.env
+++ b/home/bingo/variables.env
@@ -16,5 +16,7 @@ GOLANGCI_LINT="${GOBIN}/golangci-lint-v1.45.2"
 
 JIRA="${GOBIN}/jira-v1.0.28"
 
+SKOPEO="${GOBIN}/skopeo-v1.8.0"
+
 TFLINT="${GOBIN}/tflint-v0.36.2"
 
