--- a/home/bingo/variables.env
+++ b/home/bingo/variables.env
@@ -14,6 +14,8 @@ DOCKER_COMPOSE="${GOBIN}/docker-compose-v1.0.4"
 
 GOLANGCI_LINT="${GOBIN}/golangci-lint-v1.46.2"
 
+HUB_TOOL="${GOBIN}/hub-tool-v0.4.4"
+
 JIRA="${GOBIN}/jira-v1.0.28"
 
 SKOPEO="${GOBIN}/skopeo-v1.8.0"
