--- a/home/bingo/variables.env
+++ b/home/bingo/variables.env
@@ -10,6 +10,8 @@ fi
 
 BINGO="${GOBIN}/bingo-v0.6.0"
 
+DEVCONTAINER="${GOBIN}/devcontainer-v0.1.2493445248"
+
 DOCKER_COMPOSE="${GOBIN}/docker-compose-v1.0.5"
 
 GOLANGCI_LINT="${GOBIN}/golangci-lint-v1.46.2"
