--- a/.gitmodules
+++ b/.gitmodules
@@ -6,6 +6,10 @@ url = https://github.com/VundleVim/Vundle.vim.git
 path = src/modules/go-pkg-complete
 url = https://github.com/skelterjohn/go-pkg-complete.git
 
+[submodule "src/modules/unifi-backup-decrypt"]
+path = src/modules/unifi-backup-decrypt
+url = https://github.com/zhangyoufu/unifi-backup-decrypt.git
+
 [submodule "tools/bats-assert"]
 path = tools/bats-assert
 url = https://github.com/ztombol/bats-assert.git
@@ -22,6 +26,7 @@ url = https://github.com/ztombol/bats-support.git
 path = tools/compiler
 url = https://git.code.sf.net/p/loader/code
 branch = compilers
-[submodule "src/modules/unifi-backup-decrypt"]
-	path = src/modules/unifi-backup-decrypt
-	url = https://github.com/zhangyoufu/unifi-backup-decrypt.git
+
+[submodule "tools/bash-aptfile"]
+path = tools/bash-aptfile
+url = https://github.com/seatgeek/bash-aptfile.git
