--- a/home/config/Code/User/settings.json
+++ b/home/config/Code/User/settings.json
@@ -6,4 +6,8 @@
   "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
   "files.defaultLanguage": "${activeEditorLanguage}",
+  "workbench.settings.openDefaultSettings": true,
+  "window.closeWhenEmpty": true,
+  "window.restoreFullscreen": true,
+  "window.newWindowDimensions": "maximized",
 }
