Update VSCode settings

--- a/home/config/Code/User/settings.json
+++ b/home/config/Code/User/settings.json
@@ -10,4 +10,14 @@
   "window.closeWhenEmpty": true,
   "window.restoreFullscreen": true,
   "window.newWindowDimensions": "maximized",
+  "terminal.integrated.shellIntegration.enabled": true,
+  "git.allowForcePush": true,
+  "git.autofetch": true,
+  "git.autoStash": true,
+  "git.experimental.mergeEditor": true,
+  "git.fetchOnPull": true,
+  "git.pruneOnFetch": true,
+  "git.rebaseWhenSync": true,
+  "markdown.experimental.editor.pasteLinks.enabled": true,
+  "markdown.experimental.validate.enabled": true,
 }
