--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "home/vim/bundle/Vundle.vim"]
-path = home/vim/bundle/Vundle.vim
+path = home/dot_vim/bundle/Vundle.vim
 url = https://github.com/VundleVim/Vundle.vim.git
 
 [submodule "src/modules/bat-extras"]
