--- a/src/bingo/variables.env
+++ b/src/bingo/variables.env
@@ -10,6 +10,8 @@ fi
 
 BINGO="${GOBIN}/bingo-v0.6.0"
 
+CHEZMOI="${GOBIN}/chezmoi-v1.8.11"
+
 DEVCONTAINER="${GOBIN}/devcontainer-v0.1.2493445248"
 
 DOCKER_COMPOSE="${GOBIN}/docker-compose-v1.0.5"
