--- a/.gitmodules
+++ b/.gitmodules
@@ -1,11 +1,11 @@
-[submodule "home/vim/bundle/Vundle.vim"]
-path = home/dot_vim/bundle/Vundle.vim
-url = https://github.com/VundleVim/Vundle.vim.git
-
-[submodule "src/modules/bat-extras"]
-path = src/modules/bat-extras
-url = https://github.com/eth-p/bat-extras.git
-
-[submodule "tools/bash-aptfile"]
+[submodule "bash-aptfile"]
 path = tools/bash-aptfile
 url = https://github.com/seatgeek/bash-aptfile.git
+
+[submodule "bat-extras"]
+path = tools/bat-extras
+url = https://github.com/eth-p/bat-extras.git
+
+[submodule "Vundle.vim"]
+path = home/dot_vim/bundle/Vundle.vim
+url = https://github.com/VundleVim/Vundle.vim.git
