Tweak VSCode settings

--- a/home/dot_config/Code/User/settings.json
+++ b/home/dot_config/Code/User/settings.json
@@ -3,8 +3,6 @@
   "files.autoSave": "afterDelay",
   "files.insertFinalNewline": true,
   "files.trimTrailingWhitespace": true,
-  "editor.formatOnPaste": true,
-  "editor.formatOnSave": true,
   "files.defaultLanguage": "${activeEditorLanguage}",
   "workbench.settings.openDefaultSettings": true,
   "window.closeWhenEmpty": true,
@@ -14,6 +12,8 @@
   "git.allowForcePush": true,
   "git.autofetch": true,
   "git.autoStash": true,
+  "git.confirmSync": false,
+  "git.enableSmartCommit": true,
   "git.experimental.mergeEditor": true,
   "git.fetchOnPull": true,
   "git.pruneOnFetch": true,
