--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -1,3 +1,30 @@
+# Local
 /Makefile
-/src/
 /TODO
+
+# Private
+/.gnupg/
+/.ssh/keys/
+/.ssh/known_hosts
+
+{{ if not .server -}}
+# Dropbox
+/.dropbox/
+/Dropbox/
+/.dropbox-dist/
+{{ end -}}
+
+# Externals
+/.asdf/
+/.shell/modules/
+/.vim/bundle/
+
+# User
+/Desktop/
+/Documents/
+/Downloads/
+/Music/
+/Pictures/
+/Public/
+/Templates/
+/Videos/
