--- a/.chezmoiexternal.yaml
+++ b/.chezmoiexternal.yaml
@@ -3,6 +3,11 @@
   type: 'git-repo'
   url: 'https://github.com/asdf-vm/asdf.git'
 
+.local/bin:
+  type: 'archive'
+  url: '{{ replace "/releases/tag/" "/releases/download/" (gitHubLatestRelease "stuartleeks/devcontainer-cli").HTMLURL }}/devcontainer-cli_linux_amd64.tar.gz'
+  include: ['devcontainer']
+
 .shell/modules/bash-aptfile:
   type: 'git-repo'
   url: 'https://github.com/seatgeek/bash-aptfile.git'
