--- a/.shellcheckrc
+++ b/.shellcheckrc
@@ -1,2 +1,8 @@
-disable=SC1090,SC1091
-shell=bash
+disable=SC1090
+disable=SC1091
+
+# Temporary
+disable=SC2112
+disable=SC3001
+disable=SC3040
+disable=SC3046
