Increase `file.autoSaveDelay`

--- a/dot_config/Code/User/settings.json
+++ b/dot_config/Code/User/settings.json
@@ -20,4 +20,5 @@
   "git.rebaseWhenSync": true,
   "markdown.experimental.editor.pasteLinks.enabled": true,
   "markdown.experimental.validate.enabled": true,
+  "files.autoSaveDelay": 3000,
 }
