--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -10,12 +10,14 @@ jobs:
     steps:
       - uses: 'actions/checkout@v3'
       - run: 'curl --fail --location --no-progress-meter https://chezmoi.io/get | sh -s -- -b /usr/local/bin'
-      - run: 'chezmoi init --apply --verbose .'
+      - run: 'chezmoi init --apply --source . --verbose'
 
-      - run: 'asdf plugin list | xargs -I{} asdf install {} latest'
-      - run: 'asdf plugin list | xargs -I{} asdf global {} latest'
+      - run: |-
+          source ~/.asdf/asdf.sh
+          asdf plugin list | xargs -I{} ~/.asdf/bin/asdf install {} latest
+          asdf plugin list | xargs -I{} asdf global {} latest
 
-      - run: 'chezmoi re-add'
+      - run: 'chezmoi re-add --source .'
       - uses: 'peter-evans/create-pull-request@v4.0.4'
         with:
           commit-message: 'Update ASDF global tool versions'
