Add custom action

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,3 +14,10 @@ jobs:
       - uses: 'actions/checkout@v3'
       - run: 'curl --fail --location --no-progress-meter https://chezmoi.io/get | sh -s -- -b /usr/local/bin'
       - run: 'chezmoi init --apply --verbose .'
+  action:
+    runs-on: 'ubuntu-latest'
+    steps:
+      - uses: 'actions/checkout@v3'
+      - uses: './.github/actions/chezmoi'
+      - run: 'chezmoi cd && pwd'
+      - run: 'chezmoi data'
