--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -9,15 +9,14 @@ jobs:
     runs-on: 'ubuntu-latest'
     steps:
       - uses: 'actions/checkout@v3'
-      - run: 'curl --fail --location --no-progress-meter https://chezmoi.io/get | sh -s -- -b /usr/local/bin'
-      - run: 'chezmoi init --apply --source . --verbose'
+      - uses: './.github/actions/chezmoi'
 
       - run: |-
           source ~/.asdf/asdf.sh
           asdf plugin list | xargs -I{} ~/.asdf/bin/asdf install {} latest
           asdf plugin list | xargs -I{} asdf global {} latest
 
-      - run: 'chezmoi re-add --source .'
+      - run: 'chezmoi re-add'
       - uses: 'peter-evans/create-pull-request@v4.0.4'
         with:
           commit-message: 'Update ASDF global tool versions'
