--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -34,6 +34,7 @@
 /Videos/
 
 {{ if not .work -}}
+/.chezmoiscripts/run_onchange_after_50_atlas.sh.tmpl
 /.config/cloudtoken/
 /.local/bin/atlas
 /.local/bin/cloudtoken
