--- a/dot_config/dconf/dconf.ini
+++ b/dot_config/dconf/dconf.ini
@@ -1,6 +1,13 @@
+[org/gnome/desktop/datetime]
+automatic-timezone=true
+
 [org/gnome/desktop/peripherals/touchpad]
 natural-scroll=false
 two-finger-scrolling-enabled=true
+
+[org/gnome/desktop/privacy]
+remove-old-temp-files=true
+remove-old-trash-files=true
 
 [org/gnome/shell]
 enabled-extensions=['noannoyance@daase.net']
