Add keyboard shortcuts

--- a/dot_config/dconf/dconf.ini
+++ b/dot_config/dconf/dconf.ini
@@ -9,6 +9,11 @@ two-finger-scrolling-enabled=true
 remove-old-temp-files=true
 remove-old-trash-files=true
 
+[org/gnome/settings-daemon/plugins/media-keys]
+calculator=['<Primary><Alt>c']
+home=['<Primary><Alt>e']
+terminal=['<Primary><Alt>t']
+
 [org/gnome/shell]
 enabled-extensions=['noannoyance@daase.net']
 favorite-apps=['org.gnome.Nautilus.desktop', 'google-chrome.desktop', 'code.desktop', 'Zoom.desktop', 'slack.desktop', 'spotify_spotify.desktop']
