Use `terminator` as terminal app

--- a/dot_config/dconf/dconf.ini
+++ b/dot_config/dconf/dconf.ini
@@ -1,6 +1,10 @@
 [org/gnome/desktop/datetime]
 automatic-timezone=true
 
+[org/gnome/desktop/default-applications/terminal]
+exec=terminator
+exec-arg=--execute
+
 [org/gnome/desktop/peripherals/touchpad]
 natural-scroll=false
 two-finger-scrolling-enabled=true
