--- a/dot_config/dconf/dconf.ini
+++ b/dot_config/dconf/dconf.ini
@@ -2,8 +2,8 @@
 automatic-timezone=true
 
 [org/gnome/desktop/default-applications/terminal]
-exec=terminator
-exec-arg=--execute
+exec='terminator'
+exec-arg='--execute'
 
 [org/gnome/desktop/peripherals/touchpad]
 natural-scroll=false
