--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -34,7 +34,7 @@
 /Videos/
 
 {{ if not .work -}}
-/.chezmoiscripts/run_onchange_after_50_atlas.sh.tmpl
+/.chezmoiscripts/run_onchange_after_50_atlas.sh
 /.config/cloudtoken/
 /.local/bin/atlas
 /.local/bin/cloudtoken
