--- a/.chezmoiexternal.yaml
+++ b/.chezmoiexternal.yaml
@@ -37,6 +37,11 @@
     command: 'tar'
     args: ['--extract', '--to-stdout', '--file=-', '--gzip', 'devcontainer']
 
+.local/bin/docker-compose:
+  type: 'file'
+  url: '{{ replace "/releases/tag/" "/releases/download/" (gitHubLatestRelease "docker/compose-switch").HTMLURL }}/docker-compose-{{ .chezmoi.os }}-{{ .chezmoi.arch }}'
+  executable: true
+
 .local/share/nautilus-python/extensions/code-nautilus.py:
   type: 'file'
   url: 'https://github.com/harry-cpp/code-nautilus/raw/master/code-nautilus.py'
