--- a/dot_config/dconf/dconf.ini
+++ b/dot_config/dconf/dconf.ini
@@ -1,8 +1,11 @@
+[org/gnome/desktop/applications/terminal]
+exec='gnome-terminal'
+
 [org/gnome/desktop/datetime]
 automatic-timezone=true
 
 [org/gnome/desktop/default-applications/terminal]
-exec='terminator'
+exec='gnome-terminal'
 exec-arg='--execute'
 
 [org/gnome/desktop/peripherals/touchpad]
@@ -29,6 +32,19 @@ extend-height=true
 multi-monitor=true
 preferred-monitor=-2
 preferred-monitor-by-connector='DP-1-2'
+
+[org/gnome/terminal/legacy]
+new-terminal-mode='window'
+theme-variant='dark'
+
+[org/gnome/terminal/legacy/profiles:/:b1dcc9dd-5262-4d8d-a863-c897e6d979b9]
+background-color='rgb(23,20,33)'
+bold-is-bright=false
+default-size-columns=80
+foreground-color='rgb(208,207,204)'
+palette=['rgb(23,20,33)', 'rgb(192,28,40)', 'rgb(38,162,105)', 'rgb(162,115,76)', 'rgb(18,72,139)', 'rgb(163,71,186)', 'rgb(42,161,179)', 'rgb(208,207,204)', 'rgb(94,92,100)', 'rgb(246,97,81)', 'rgb(51,209,122)', 'rgb(233,173,12)', 'rgb(42,123,222)', 'rgb(192,97,203)', 'rgb(51,199,222)', 'rgb(255,255,255)']
+use-theme-colors=false
+visible-name='Default'
 
 [org/gtk/gtk4/settings/file-chooser]
 show-hidden=false
