Maximize `gnome-terminal`

--- a/dot_config/dconf/dconf.ini
+++ b/dot_config/dconf/dconf.ini
@@ -1,11 +1,11 @@
 [org/gnome/desktop/applications/terminal]
-exec='gnome-terminal'
+exec='gnome-terminal --maximize'
 
 [org/gnome/desktop/datetime]
 automatic-timezone=true
 
 [org/gnome/desktop/default-applications/terminal]
-exec='gnome-terminal'
+exec='gnome-terminal --maximize'
 exec-arg='--execute'
 
 [org/gnome/desktop/peripherals/touchpad]
