Update SSH config

--- a/dot_ssh/conf.d/home.conf
+++ b/dot_ssh/conf.d/home.conf
@@ -2,11 +2,11 @@ Host homeassistant homeassistant.spence.network
   IdentityFile ~/.ssh/keys/rpi.key
   User hassio
 
-Host unifi gateway protect unifi.spence.network gateway.spence.network protect.spence.network
+Host unifi protect unifi.spence.network *.unifi.spence.network protect.spence.network
   IdentityFile ~/.ssh/keys/ubnt.key
   User ubnt
 
-Host gateway gateway.spence.network
+Host gateway.unifi.spence.network
   HostKeyAlgorithms +ssh-rsa
   PubkeyAcceptedKeyTypes +ssh-rsa
 
