--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -14,6 +14,7 @@
 /.chezmoiscripts/99_gnome-extensions.sh
 /.config/dconf/
 /.config/gtk-*/
+/.config/mimeapps.list
 {{ end -}}
 
 {{ if not .headless -}}
