Tweak SSH config

--- a/dot_ssh/conf.d/home.conf
+++ b/dot_ssh/conf.d/home.conf
@@ -1,17 +1,16 @@
-Host homeassistant homeassistant.spence.network
-  IdentityFile ~/.ssh/keys/rpi.key
-  User hassio
-
-Host unifi protect unifi.spence.network *.unifi.spence.network protect.spence.network
-  IdentityFile ~/.ssh/keys/ubnt.key
-  User ubnt
-
-Host gateway.unifi.spence.network
+# See https://community.ui.com/questions/Fix-for-ssh-authentication-failure-no-matching-host-key-type-found-Their-offer-ssh-rsa/81151760-ce61-428b-9de5-9cbf434be5db
+Host gateway.mgmt.spence.network
   HostKeyAlgorithms +ssh-rsa
   PubkeyAcceptedKeyTypes +ssh-rsa
 
-Host kube*.spence.network
+Host homeassistant.spence.network homeassistant.trusted.spence.network
   IdentityFile ~/.ssh/keys/rpi.key
-  StrictHostKeyChecking no
-  User pi
-  UserKnownHostsFile /dev/null
+  User hassio
+
+Host protect.spence.network *.security.spence.network 192.168.50.*
+  IdentityFile ~/.ssh/keys/ubnt.key
+  User ubnt
+
+Host unifi.spence.network *.mgmt.spence.network 192.168.1.*
+  IdentityFile ~/.ssh/keys/ubnt.key
+  User ubnt
