Tweak power settings

--- a/dot_config/dconf/dconf.ini
+++ b/dot_config/dconf/dconf.ini
@@ -8,6 +8,9 @@ automatic-timezone=true
 exec='gnome-terminal --maximize'
 exec-arg='--execute'
 
+[org/gnome/desktop/interface]
+show-battery-percentage=true
+
 [org/gnome/desktop/peripherals/touchpad]
 natural-scroll=false
 two-finger-scrolling-enabled=true
@@ -16,10 +19,16 @@ two-finger-scrolling-enabled=true
 remove-old-temp-files=true
 remove-old-trash-files=true
 
+[org/gnome/desktop/session]
+idle-delay=900
+
 [org/gnome/settings-daemon/plugins/media-keys]
 calculator=['<Primary><Alt>c']
 home=['<Primary><Alt>e']
 terminal=['<Primary><Alt>t']
+
+[org/gnome/settings-daemon/plugins/power]
+idle-dim=true
 
 [org/gnome/shell]
 enabled-extensions=['noannoyance@daase.net']
