Disable GitLens blame

--- a/dot_config/Code/User/settings.json
+++ b/dot_config/Code/User/settings.json
@@ -23,4 +23,8 @@
   "files.autoSaveDelay": 3000,
   "terminal.integrated.enableMultiLinePasteWarning": false,
   "go.toolsManagement.autoUpdate": true,
+  "yaml.schemas": {
+    "file:///home/jspence2/.local/share/Code/extensions/atlassian.atlascode-2.10.12/resources/schemas/pipelines-schema.json": "bitbucket-pipelines.yml"
+  },
+  "gitlens.currentLine.enabled": false,
 }
