--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -10,7 +10,8 @@ jobs:
     runs-on: 'ubuntu-latest'
     steps:
       - uses: 'actions/checkout@v3'
-      - run: 'curl --fail --location --no-progress-meter https://get.chezmoi.io | sh -s -- -b /usr/local/bin'
-      - run: 'mkdir .target'
-      - run: 'chezmoi init --apply --include templates --destination .target --verbose .'
+      - uses: './.github/actions/chezmoi'
+      - run: |-
+          mkdir .target
+          chezmoi archive --exclude externals | tar --extract --file=- --directory=.target
       - uses: 'ludeeus/action-shellcheck@b2bbefc2e6b9dcbc6355b85e366c9e55bf8d57e1'
