--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -15,3 +15,9 @@ jobs:
           mkdir .target
           chezmoi archive --exclude externals | tar --extract --file=- --directory=.target
       - uses: 'ludeeus/action-shellcheck@b2bbefc2e6b9dcbc6355b85e366c9e55bf8d57e1'
+
+  yamllint:
+    runs-on: 'ubuntu-latest'
+    steps:
+      - uses: 'actions/checkout@v3'
+      - uses: 'ibiqlik/action-yamllint@v3.1.1'
