Add GitHub CLI credential helper

--- a/dot_config/exact_git/config
+++ b/dot_config/exact_git/config
@@ -119,3 +119,7 @@ email = josh@spence.com.au
 
 [includeIf "gitdir:~/workspace/atlassian*/"]
 path = ~/.gitconfig-atlassian
+
+[credential "https://github.com"]
+helper =
+helper = !/usr/bin/gh auth git-credential
