--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,6 +8,13 @@ on:
   schedule:
     - cron: '0 0 * * 1'
 jobs:
+  test:
+    runs-on: 'ubuntu-latest'
+    steps:
+      - run: 'env'
+      - run: 'env'
+        env:
+          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
   bootstrap:
     runs-on: 'ubuntu-latest'
     steps:
