--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,3 +14,5 @@ jobs:
       - uses: 'actions/checkout@v3'
       - uses: './.github/actions/chezmoi'
       - run: 'chezmoi apply --verbose'
+        env:
+          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
