Tweak `dconf` settings

--- a/dot_config/dconf/dconf.ini
+++ b/dot_config/dconf/dconf.ini
@@ -9,6 +9,7 @@ exec='gnome-terminal --maximize'
 exec-arg='--execute'
 
 [org/gnome/desktop/interface]
+enable-hot-corners=false
 show-battery-percentage=true
 
 [org/gnome/desktop/peripherals/touchpad]
@@ -21,6 +22,15 @@ remove-old-trash-files=true
 
 [org/gnome/desktop/session]
 idle-delay=900
+
+[org/gnome/desktop/sound]
+allow-volume-above-100-percent=false
+
+[org/gnome/meld]
+folder-status-filters=['new', 'modified']
+
+[org/gnome/mutter]
+edge-tiling=true
 
 [org/gnome/settings-daemon/plugins/media-keys]
 calculator=['<Primary><Alt>c']
@@ -39,8 +49,11 @@ dash-max-icon-size=48
 dock-fixed=false
 extend-height=true
 multi-monitor=true
-preferred-monitor=-2
-preferred-monitor-by-connector='DP-1-2'
+preferred-monitor-by-connector='primary'
+show-mounts=false
+
+[org/gnome/shell/overrides]
+workspaces-only-on-primary=false
 
 [org/gnome/terminal/legacy]
 new-terminal-mode='window'
