--- a/dot_config/dconf/dconf.ini
+++ b/dot_config/dconf/dconf.ini
@@ -12,6 +12,9 @@ exec-arg='--execute'
 enable-hot-corners=false
 show-battery-percentage=true
 
+[org/gnome/desktop/peripherals/keyboard]
+delay=1000
+
 [org/gnome/desktop/peripherals/touchpad]
 natural-scroll=false
 two-finger-scrolling-enabled=true
