Add SSH config for `homelab` network

--- a/dot_ssh/conf.d/home.conf
+++ b/dot_ssh/conf.d/home.conf
@@ -9,3 +9,7 @@ Host protect.spence.network *.security.spence.network 192.168.50.*
 Host unifi.spence.network *.mgmt.spence.network 192.168.1.*
   IdentityFile ~/.ssh/keys/ubnt.key
   User ubnt
+
+Host *.homelab.spence.network 192.168.60.*
+  IdentityFile ~/.ssh/keys/rpi.key
+  User pi
