--- a/.chezmoiexternals/amazon-ecr-credential-helper.yaml
+++ b/.chezmoiexternals/amazon-ecr-credential-helper.yaml
@@ -2,4 +2,4 @@
 .local/bin/docker-credential-ecr-login:
   type: 'file'
   executable: true
-  url: 'https://amazon-ecr-credential-helper-releases.s3.amazonaws.com/{{ (gitHubLatestRelease "awslabs/amazon-ecr-credential-helper").TagName | trimPrefix "v" }}/linux-amd64/docker-credential-ecr-login'
+  url: 'https://amazon-ecr-credential-helper-releases.s3.amazonaws.com/{{ (gitHubLatestRelease "awslabs/amazon-ecr-credential-helper").TagName | trimPrefix "v" }}/{{ .chezmoi.os }}-{{ .chezmoi.arch }}/docker-credential-ecr-login'
