--- a/.chezmoiexternals/circleci.yaml
+++ b/.chezmoiexternals/circleci.yaml
@@ -1,8 +1,7 @@
 ---
 .local/bin/circleci:
-  type: 'file'
+  type: 'archive-file'
   executable: true
-  url: '{{ replace "/releases/tag/" "/releases/download/" (gitHubLatestRelease "CircleCI-Public/circleci-cli").HTMLURL }}/circleci-cli_{{ replace "v" ""  (gitHubLatestRelease "CircleCI-Public/circleci-cli").Name }}_{{ .chezmoi.os }}_{{ .chezmoi.arch }}.tar.gz'
-  filter:
-    command: 'tar'
-    args: ['--extract', '--to-stdout', '--file=-', '--gzip', '--wildcards', '*/circleci']
+  path: 'circleci'
+  stripComponents: 1
+  url: '{{ (gitHubLatestRelease "CircleCI-Public/circleci-cli").HTMLURL | replace "/releases/tag/" "/releases/download/" }}/{{ printf "circleci-cli_%s_%s_%s.tar.gz" ((gitHubLatestRelease "CircleCI-Public/circleci-cli").Name | trimPrefix "v") .chezmoi.os .chezmoi.arch }}'
