--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -14,7 +14,7 @@ jobs:
       - run: |-
           mkdir .target
           chezmoi archive --exclude externals | tar --extract --file=- --directory=.target
-      - uses: 'ludeeus/action-shellcheck@00cae500b08a931fb5698e11e79bfbd38e612a38'
+      - uses: 'ludeeus/action-shellcheck@2.0.0'
 
   yamllint:
     runs-on: 'ubuntu-latest'
