--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -8,12 +8,30 @@ on:
 jobs:
   shellcheck:
     runs-on: 'ubuntu-latest'
+    outputs:
+      files: '${{ steps.shellcheck.outputs.files }}'
     steps:
       - uses: 'actions/checkout@v4'
       - uses: './.github/actions/chezmoi'
-      - run: 'mkdir .target'
-      - run: 'chezmoi archive --exclude externals | tar --extract --directory .target'
-      - uses: 'ludeeus/action-shellcheck@2.0.0'
+      - run: |
+          mkdir .target
+          chezmoi archive --exclude externals | tar --extract --directory .target
+
+      - id: 'shellcheck'
+        uses: 'ludeeus/action-shellcheck@2.0.0'
+
+  shfmt:
+    runs-on: 'ubuntu-latest'
+    needs: 'shellcheck'
+    steps:
+      - uses: 'actions/checkout@v4'
+      - uses: './.github/actions/chezmoi'
+      - run: |
+          mkdir .target
+          chezmoi archive --exclude externals | tar --extract --directory .target
+
+      - uses: 'mfinelli/setup-shfmt@v3.0.1'
+      - run: 'shfmt --diff --indent=2 ${{ needs.shellcheck.outputs.files }}'
 
   yamllint:
     runs-on: 'ubuntu-latest'
