Pass `--simplify` to `shfmt`

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -29,7 +29,7 @@ jobs:
           mkdir .target
           chezmoi archive --exclude externals | tar --extract --directory .target
       - uses: 'mfinelli/setup-shfmt@v3.0.1'
-      - run: 'shfmt --diff --indent=2 ${{ needs.shellcheck.outputs.files }}'
+      - run: 'shfmt --diff --simplify --indent=2 ${{ needs.shellcheck.outputs.files }}'
 
   yamllint:
     runs-on: 'ubuntu-latest'
