--- a/.github/actions/chezmoi/action.yaml
+++ b/.github/actions/chezmoi/action.yaml
@@ -1,18 +1,26 @@
 ---
 name: 'Chezmoi'
 description: 'GitHub action for Chezmoi.'
+inputs:
+  init:
+    description: ''
+    default: true
 runs:
   using: 'composite'
   steps:
     - name: 'Install Chezmoi'
-      shell: 'bash'
+      shell: 'sh'
       run: 'curl --fail --location --no-progress-meter https://get.chezmoi.io | sh -s -- -b ${{ github.action_path }}'
     - name: 'Add Chezmoi to $PATH'
-      shell: 'bash'
+      shell: 'sh'
       run: 'echo "${{ github.action_path }}" >> $GITHUB_PATH'
     - name: 'Display Chezmoi version'
-      shell: 'bash'
+      shell: 'sh'
       run: 'chezmoi --version'
+    - shell: 'sh'
+      run: 'echo ${{ github.path }}'
+    - shell: 'sh'
+      run: 'echo $GITHUB_PATH'
 
-    - shell: 'bash'
+    - shell: 'sh'
       run: 'chezmoi init .'
