--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -7,6 +7,7 @@ on:
       - 'master'
 jobs:
   render:
+    name: 'Render Chezmoi templates'
     runs-on: 'ubuntu-latest'
     steps:
       - uses: 'actions/checkout@v4'
