--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -34,6 +34,9 @@ jobs:
         uses: 'actions/checkout@v4'
       - name: 'Setup Chezmoi'
         uses: './.github/actions/chezmoi'
+      - name: 'Initialize Chezmoi'
+        shell: 'sh'
+        run: 'chezmoi init --promptDefaults .'
 
       - name: 'Run Chezmoi'
         run: 'chezmoi apply --keep-going'
